	* server/server.c, server/server.h, server/admin.c, server/admin.h:
	Added 'send-message', 'help', 'info' to the admin commands.
	The addition of 'send-message' is based on a patch by David Hall
	<hacking@gringer.dis.org.nz>
	* common/gtk/theme.c: The default theme is now 'Tiny'.
	* common/gtk/guimap.c: Use the full size for the map. The font size in
	the server was effectively always 1pt.
	
2007-07-21  Roland Clobus <rclobus@bigfoot.com>
	* server/server.h: Added robber undo in 0.11 change list.

2007-07-21  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/player-icon.c, common/gtk/player-icon.h,
	common/gtk/Makefile.am, server/player.c, server/server.h,
	server/pregame.c, client/callback.h, client/gtk/callbacks.c,
	client/gtk/name.c, client/gtk/frontend.h, client/gtk/data/Makefile.am,
	client/gtk/player.c, client/gtk/quote-view.c, client/gtk/chat.c,
	client/gtk/offline.c, client/gtk/connect.c, client/common/client.c,
	client/common/client.h, client/common/callback.c,
	client/common/player.c, client/ai/ai.c: Added a customizable player
	icon. Based on a patch by Giancarlo Capella <giancarlo@comm.cc>.

2007-07-21  Bas Wijnen <shevek@fmf.nl>
	* common/map.c, server/player.c, server/robber.c, server/server.h,
	client/callback.h, client/gtk/interface.c, client/gtk/callbacks.c,
	client/gtk/frontend.h, client/common/client.c, client/common/client.h,
	client/common/robber.c, client/common/callback.c, client/ai/greedy.c:
	Show the robber in the new place when choosing who to steal from.

2007-07-21  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, pioneers.nsi.in: Add minimum required Gtk+ version
	from configure.ac in the installer builder script.
	
2007-07-21  Bas Wijnen <shevek@fmf.nl>
	* ChangeLog, docs/README.game, common/gtk/gtkbugs.c, common/state.c,
	configure.ac, po/ChangeLog, client/gtk/quote.c,
	client/help/C/custom.xsl: Clean up whitespace.

2007-07-20  Roland Clobus<rclobus@bigfoot.com>
	* common/state.c, common/state.h, configure.ac, server/gold.c,