@@ -60,11 +60,13 @@ var ICONS_GROUP
 !insertmacro MUI_UNPAGE_INSTFILES
 
 ; Language files
+!insertmacro MUI_LANGUAGE "Afrikaans"
 !insertmacro MUI_LANGUAGE "Dutch"
 !insertmacro MUI_LANGUAGE "English"
 !insertmacro MUI_LANGUAGE "French"
 !insertmacro MUI_LANGUAGE "German"
 !insertmacro MUI_LANGUAGE "Hungarian"
+!insertmacro MUI_LANGUAGE "Japanese"
 !insertmacro MUI_LANGUAGE "Spanish"
 !insertmacro MUI_LANGUAGE "Swedish"
 
@@ -91,6 +93,8 @@ Section "!Minimal install" SEC01
 
   SetOverwrite TRY
 ; Translations
+  SetOutPath "$INSTDIR\locale\af\LC_MESSAGES"
+  File "..\..\..\local\locale\af\LC_MESSAGES\pioneers.mo"
   SetOutPath "$INSTDIR\locale\de\LC_MESSAGES"
   File "..\..\..\local\locale\de\LC_MESSAGES\pioneers.mo"
   SetOutPath "$INSTDIR\locale\es\LC_MESSAGES"
@@ -101,6 +105,8 @@ Section "!Minimal install" SEC01
   File "..\..\..\local\locale\hu\LC_MESSAGES\pioneers.mo"
   SetOutPath "$INSTDIR\locale\it\LC_MESSAGES"
   File "..\..\..\local\locale\it\LC_MESSAGES\pioneers.mo"
+  SetOutPath "$INSTDIR\locale\ja\LC_MESSAGES"
+  File "..\..\..\local\locale\ja\LC_MESSAGES\pioneers.mo"
   SetOutPath "$INSTDIR\locale\nl\LC_MESSAGES"
   File "..\..\..\local\locale\nl\LC_MESSAGES\pioneers.mo"
   SetOutPath "$INSTDIR\locale\sv\LC_MESSAGES"
@@ -360,11 +366,13 @@ Section Uninstall
 ;  Delete "$INSTDIR\man\man6\pioneers-meta-server.6"
   Delete "$INSTDIR\locale\sv\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\nl\LC_MESSAGES\pioneers.mo"
+  Delete "$INSTDIR\locale\ja\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\it\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\hu\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\fr\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\es\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\de\LC_MESSAGES\pioneers.mo"
+  Delete "$INSTDIR\locale\af\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\games\pioneers\x.game"
   Delete "$INSTDIR\games\pioneers\star.game"
   Delete "$INSTDIR\games\pioneers\square.game"
@@ -410,6 +418,8 @@ Section Uninstall
   RMDir "$INSTDIR\locale\sv"
   RMDir "$INSTDIR\locale\nl\LC_MESSAGES"
   RMDir "$INSTDIR\locale\nl"
+  RMDir "$INSTDIR\locale\ja\LC_MESSAGES"
+  RMDir "$INSTDIR\locale\ja"
   RMDir "$INSTDIR\locale\it\LC_MESSAGES"
   RMDir "$INSTDIR\locale\it"
   RMDir "$INSTDIR\locale\hu\LC_MESSAGES"
@@ -420,6 +430,8 @@ Section Uninstall
   RMDir "$INSTDIR\locale\es"
   RMDir "$INSTDIR\locale\de\LC_MESSAGES"
   RMDir "$INSTDIR\locale\de"
+  RMDir "$INSTDIR\locale\af\LC_MESSAGES"
+  RMDir "$INSTDIR\locale\af"
   RMDir "$INSTDIR\locale"
   RMDir "$INSTDIR\games\pioneers"
   RMDir "$INSTDIR\games"
